src/style/uploader.less
@import "./common.less";

////////////////////////////////////////////
// uploader
////////////////////////////////////////////

.displaying-import-view {
  background: linear-gradient(@uploader-a 0%, @uploader-b 40%, @uploader-b 60%, @uploader-a 100%);
  overflow: auto;
  #uploader {
    display: flex;
    flex-direction: row;
  }
}



#uploader {
  .t25();
  min-height: 815px;
  color: white;
  padding: 72px;

  a, a:visited {
    color: @toggle-text;
  }
  .symbol {
    .smoothly(color);
    font-size: 20px;
    margin-right: 0.6rem;
    color: @highlight-hover;
  }

  &.disabled {
    #uploader--file-input--label, #uploader--demo-button {
      pointer-events: none;
      opacity: 0.4;
    }
    #uploader--status-init {
      opacity: 1;
    }
  }

  &.loading, &.parsing, &.error {
    #uploader--status {opacity: 1.0;}
  }


  &.loading #uploader--status-load,
  &.parsing #uploader--status-parse,
  &.error #uploader--status-error {
    opacity: 0.5;
  }

  &.dragging {
    #uploader--file-input--label {
      background-color: fade(@del, 20%);
      color: lighten(@del, 20%);
      border: 1px dashed lighten(@del, 10%);
    }
  }

  &.direct-loading {

    &.loading #uploader--status-load,
    &.parsing #uploader--status-parse {
      opacity: 1.0;
    }

    #uploader--demo-button,
    .uploader--or,
    #uploader--file-input--label {
      display: none;
    }

    #uploader--status {
      bottom: unset;
    }
  }

}



// ███████╗██████╗  ██████╗ ███╗   ██╗████████╗    ███╗   ███╗ █████╗ ████████╗████████╗███████╗██████╗ ███████╗
// ██╔════╝██╔══██╗██╔═══██╗████╗  ██║╚══██╔══╝    ████╗ ████║██╔══██╗╚══██╔══╝╚══██╔══╝██╔════╝██╔══██╗██╔════╝
// █████╗  ██████╔╝██║   ██║██╔██╗ ██║   ██║       ██╔████╔██║███████║   ██║      ██║   █████╗  ██████╔╝███████╗
// ██╔══╝  ██╔══██╗██║   ██║██║╚██╗██║   ██║       ██║╚██╔╝██║██╔══██║   ██║      ██║   ██╔══╝  ██╔══██╗╚════██║
// ██║     ██║  ██║╚██████╔╝██║ ╚████║   ██║       ██║ ╚═╝ ██║██║  ██║   ██║      ██║   ███████╗██║  ██║███████║
// ╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═══╝   ╚═╝       ╚═╝     ╚═╝╚═╝  ╚═╝   ╚═╝      ╚═╝   ╚══════╝╚═╝  ╚═╝╚══════╝


#uploader--title {
  .t40();
  margin-bottom: 40px;
}

#uploader--identity {
  width: 200px;
  height: 64px;
  // text-align: center;
  .logotype-del {fill: @del}
  .logotype-phy {fill: @phy}
  .texture {fill: @texture}
}

.uploader--tagline {
  // text-align: center;
  .t40();
  font-weight: 500;
  color: #fff;
  width: 300px;
  margin-top: 60px;
}




#uploader--privacy {
  // position: fixed;
  // bottom: 20px;
  // right: 20px;
  font-size: 15px;
  line-height: 18px;
  a, a:visited {
    color: @toggle-text;
  }
}

#uploader--version-info {
  color: @toggle-text;
  font-size: 15px;
  font-weight: 400;
  line-height: 18px;
  p {
    margin: 5px 0;
  }
}

.uploader--button-row {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
}






//  ██████╗ ██████╗ ███████╗███╗   ██╗
// ██╔═══██╗██╔══██╗██╔════╝████╗  ██║
// ██║   ██║██████╔╝█████╗  ██╔██╗ ██║
// ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║
// ╚██████╔╝██║     ███████╗██║ ╚████║
//  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝



.uploader--entry-points {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  h2 {
    font-weight: 700;
    font-size: 20px;
    line-height: 25px;
    margin: 0;
    // color: @del;
    margin-bottom: 1em;
  }

}

#uploader--file-url {
  margin-bottom: 40px;
  height: 265px;
  #uploader--file-url-pathways {
    display: flex;
    flex-direction: row;
  }
}


#uploader--file-input {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
  clip: rect(0, 0, 0, 0);

  &:focus + label {
    outline: auto;
  }
}


#uploader--file-input--label, #uploader--url-message {
  width: 100%;
  .t25();
  .smoothly(all);
  display: flex;
  flex-direction: column;
  justify-content: space-around;

  align-items: center;
  padding: 15px;
  text-align: center;

  color: lighten(@del, 10%);
  border-width: 1px;
  font-weight: 400;
  padding: 25px 20px;
  line-height: 30px;

  &:hover {
    color: lighten(@del, 10%);
  }

  .file-types {
    color: @del;
  }

  .uploader--entry-title {
    color: white;
  }
}

#uploader--file-input--label {
  cursor: pointer;
  background-color: fade(@del, 30%);
  border-color: @del;
  border-style: dashed;
  border-radius : 12px 0 0 12px;

  &:hover {
    background-color: fade(@del, 15%);
    border-color: lighten(@del, 10%);
  }

}

.opening {
  border-radius : 12px 12px 12px 12px !important;
}

.disabled {
  pointer-events: none;
  cursor: default;
}


#uploader--url-input {
  font-family: 'MD System', Roboto, monospace;
  font-size: 15px;
  padding: 5px 10px;
  background-color: @del !important;
  color: @toggle;
  width: 20em;
  margin: 10px 0px 20px;
  border-radius: 5px;
  border-width: 0px;

  &::placeholder {
    color: @toggle;
  }

}



#uploader--url-message {
  position: relative;

  p {
    margin: 0;
  }

  &.proxy-info {
    #uploader--proxy-info {display: block;}
    .uploader--proxy-info-activate--open {display: none;}
    .uploader--proxy-info-activate--close {display: unset;}
  }
}



#uploader--url-form-submit
{

  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;

  margin: 0;

  label {
    margin: auto auto;

    background-color: fade(@del, 10%);
    color: lighten(@del, 10%);
    border: 1px solid fade(@del, 10%);
    padding: 5px 25px;
    display: inline-block;
    position: relative;
    cursor: pointer;
    border-radius: 5px;
    margin: 5px;
    font-size: 15px;
    transition: all 0.15s;


    &:hover {
      border-color: @del;
    }

    input {
      opacity: 0;
      width: 0;
      position: absolute;
    }

    &:has(input:checked) {
      background-color: fade(@del, 30%);
      color: white;
      border-color: @del;
    }

    &:has(input:focus-visible) {
      outline: auto;
    }
  }
}
/* ... */

